# gcpctx

./: .bandit  .gitignore  .pylintrc  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mise.toml  pyproject.toml  requirements.setup.txt  ruff.toml
.claude/skills/codeql-fix/: SKILL.md
.claude/skills/lint-and-fix/: SKILL.md
.claude/skills/security-scan/: SKILL.md
.claude/skills/setup-dev-env/: SKILL.md
.cursor/commands/: loop-on-thermos.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  mise_toolchain.yml  publish.yml  test-publish.yml  test.yml  trunk_check.yml
.trunk/: trunk.yaml
dev/: check-docker-action-pins.sh  codeql-platform.sh  codeql.sh  setup-tools.sh  test-mise-toolchain.sh  test_python.sh
docs/: doctor-contract.md
docs/adr/: 0002-mise-toolchain-and-attestation-settings.md  0003-directory-scoped-gcp-contexts-via-cloudsdk-config.md  0004-service-account-impersonation-without-keys.md  0005-repository-trust-model-for-project-local-config.md  0006-shell-activation-and-environment-contract.md  0007-profile-configuration-security-boundary.md  0008-process-scoped-execution-via-gcpctx-run.md  0009-v0.2-secure-by-default-hardening.md
docs/checks/: adc.md  ambient_cloudsdk.md  approval.md  approval_expiry.md  config.md  env_project.md  expected_context.md  gac.md  gcloud_project.md  gcloud_trust.md  impersonation.md  impersonation_iam.md  policy.md  profile.md  settings.md  state_permissions.md
examples/: .gcpctx.toml.example  README.md  google_auth_credentials.py
examples/terraform/: .gitignore  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
src/gcpctx/: __init__.py  __main__.py  activation.py  approvals.py  audit.py  cleanup.py  cli.py  config.py  context_id.py  discovery.py  doctor.py  doctor_checks.py  errors.py  exit_codes.py  gcloud.py  gcloud_trust.py  logging.py  models.py  paths.py  policy.py  project_context.py  runner.py  security.py  settings.py  shell.py  timeutil.py  toolchain.py
src/gcpctx/tests/: conftest.py  test_activation.py  test_approvals.py  test_audit.py  test_cleanup.py  test_cli.py  test_config.py  test_context_id.py  test_discovery.py  test_doctor.py  (+10 more)
