[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  ".git",
  ".venv",
  ".mypy_cache",
  ".ruff_cache",
  ".pyright",
  ".pytest_cache",
  ".github",
  ".trunk",
  "dev",
  "src/gcpctx/tests",
  "dist",
  ".python-version",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gcpctx"]

[project]
name = "gcpctx"
version = "0.1.0"
authors = [{ name = "yu-iskw" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
description = "Directory-scoped Google Cloud service account impersonation contexts"
dependencies = [
  "platformdirs>=4.0.0",
  "pydantic>=2.0.0",
  "rich>=13.0.0",
  "typer>=0.12.0",
]

[project.scripts]
gcpctx = "gcpctx.cli:app"

[tool.pytest.ini_options]
testpaths = ["src/gcpctx/tests"]

[dependency-groups]
dev = [
  "xenon>=0.9.3",
  "pytest>=8.3.5",
  "pytest-cov>=6.0",
  "bandit>=1.8.3",
  "ruff>=0.15.0",
  "pyright>=1.1.0",
  "pylint>=3.3.5",
  "vulture>=2.16",
  "ssort>=0.16.0",
]

[tool.pyright]
include = ["src"]
extraPaths = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = "warning"

[tool.vulture]
paths = ["src/gcpctx"]
min_confidence = 80

[tool.coverage.run]
branch = true
source = ["src/gcpctx"]

[tool.coverage.report]
show_missing = true
omit = ["*/tests/*"]

[tool.bandit]
exclude_dirs = ["src/gcpctx/tests"]
